# gui_do

./: .coveragerc  .lastfailed.txt  MANIFEST.in  MANUAL.md  README.md  TUTORIAL.md  _pre_rebase_demo_2b83537.py  contract_docs_helpers.py  contract_test_catalog.py  demo.py  example01.py  example02.py  example03.py  example04.py  example05.py  example06.py  example07.py  full_output.txt  full_suite_discover_output_latest.txt  full_suite_output_latest.txt  full_test_log.txt  full_test_output.txt  gui_do.py  gui_do_demo.py  gui_do_editor.py  gui_do_life.py  gui_do_mandelbrot.py  gui_do_styles.py  gui_test.py  life.py  out_1.txt  out_2.txt  out_3.txt  out_4.txt  out_5.txt  out_all.txt  out_full_state_refactor.txt  out_single.txt  overview.md  pyproject.toml  (+16 more)
demo/: demo.py
demo_features/: __init__.py  _import_bootstrap.py  bouncing_shapes_demo_feature.py  control_showcase_category_visibility.py  control_showcase_runtime.py  control_showcase_spec_factories.py  controls_demo_feature.py  demo_config.py  feature_abstractions.py  life_demo_feature.py  life_window_presenter.py  main_demo_feature.py  mandelbrot_demo_feature.py  mandelbrot_window_presenter.py  new_systems_demo_feature.py  styles_demo_feature.py  system_window_demo_feature.py  systems_demo_feature.py  systems_window_presenter.py
demo_parts/: __init__.py  bouncing_circles_demo_part.py  bouncing_shapes_demo_part.py  controls_demo_part.py  demo_part.py  life_demo_part.py  life_simulation_feature.py  mandel_events.py  mandelbrot_demo_part.py  mandelbrot_render_feature.py  styles_demo_part.py
docs/: architecture.md  (+10 more)
(+1107 files in other folders)
